--- a/job_finder/jobs/templates/jobs/positions-list.html
+++ b/job_finder/jobs/templates/jobs/positions-list.html
@@ -13,13 +13,14 @@
 <main class="container">
     {% for position in positions %}
     <div class="row">
-        <div class="two columns">{{ position.start_date }}</div>
+        <div class="two columns">{{ position.start_date | date:'d-m-Y' }}</div>
         <div class="two columns">{{ position.company_name }}</div>
         <div class="two columns">{% if position.link %}<a href="{{ position.link }}">{{ position.role }}</a>{% else %}{{ position.role }}{% endif %}</div>
+        <div class="six columns">
         {% for note in position.notes.all %}
-        <div class="two columns">{{ note.happened_at }}</div>
-        <div class="four columns">{{ note.description }}</div>
+            <div>{{ note.happened_at | date:'d-m-Y' }}- {{ note.description }}</div>
         {% endfor %}
+        </div>
     </div>
     {% endfor %}
 </main>
