--- a/job_finder/jobs/templates/jobs/note-form.html
+++ b/job_finder/jobs/templates/jobs/note-form.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
         <button class="button-primary">Submit</button>
-        <button class="button">Reset</button>
+        <button class="button" type="reset">Reset</button>
     </div>
     </form>
 {% endblock %}
