--- a/job_finder/jobs/templates/jobs/position-form.html
+++ b/job_finder/jobs/templates/jobs/position-form.html
@@ -1,7 +1,7 @@
 {% extends 'common/base.html' %}
-{% block title %}<title>add position</title>{% endblock %}
+{% block title %}<title>{% if is_edit %}Edit{% else %}Add{% endif %} position</title>{% endblock %}
 {% block content %}
-    <h1>Add position</h1>
+    <h1>{% if is_edit %}Edit{% else %}Add{% endif %} position</h1>
     <form method="post">
     {% csrf_token %}
     <div class="row">
@@ -22,7 +22,7 @@
     </div>
     <div class="row">
         <label for="{{ form.start_date.name }}" class="two columns">{{ form.start_date.label_tag }}</label>
-        <input id="{{ form.start_date.name }}" type="date" name="{{ form.start_date.name }}" value="{% if form.start_date.value %}{{ form.start_date.value }}{% endif %}" class="four columns" />
+        <input id="{{ form.start_date.name }}" type="date" name="{{ form.start_date.name }}" value="{{ form.start_date.value | date:'Y-m-d' }}" class="four columns" />
     </div>
     <div class="row">
         <label for="{{ form.is_rejected.name }}" class="two columns">{{ form.is_rejected.label_tag }}</label>
@@ -30,7 +30,7 @@
     </div>
     <div class="row">
         <button class="button-primary">Submit</button>
-        <button class="button">Reset</button>
+        <button class="button" type="reset">Reset</button>
     </div>
     </form>
 {% endblock %}
