--- a/job_finder/common/templates/common/base.html
+++ b/job_finder/common/templates/common/base.html
@@ -9,6 +9,17 @@
 </head>
 <body>
 <div class="container">
+<div class="row">
+    <div class="two columns">
+        <a href="/" class="logo">Job Finder</a>
+    </div>
+    <div class="two columns">
+        <a href="{% url 'company-list' %}">companies</a>
+    </div>
+    <div class="two columns">
+        <a href="{% url 'position-list' %}">positions</a>
+    </div>
+</div>
 {% block content %}{% endblock %}
 </div>
 </body>
