--- a/job_finder/jobs/templates/jobs/position-form.html
+++ b/job_finder/jobs/templates/jobs/position-form.html
@@ -21,6 +21,10 @@
         <input id="{{ form.lead.name }}" type="text" name="{{ form.lead.name }}" value="{% if form.lead.value %}{{ form.lead.value }}{% endif %}" class="four columns" />
     </div>
     <div class="row">
+        <label for="{{ form.info }}" class="two columns">{{ form.info.label_tag }}</label>
+        <input id="{{ form.info.name }}" type="textarea" name="{{ form.info.name }}" value="{% if form.info.value %}{{ form.info.value }}{% endif %}" class="four columns" />
+    </div>
+    <div class="row">
         <label for="{{ form.start_date.name }}" class="two columns">{{ form.start_date.label_tag }}</label>
         <input id="{{ form.start_date.name }}" type="date" name="{{ form.start_date.name }}" value="{{ form.start_date.value | date:'Y-m-d' }}" class="four columns" />
     </div>
