--- a/job_finder/common/templates/common/base.html
+++ b/job_finder/common/templates/common/base.html
@@ -6,6 +6,7 @@
     {% block title %}{% endblock %}
     <link rel="stylesheet" href="{% static 'jobs/css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'jobs/css/skeleton.css' %}">
+{#    <link rel="stylesheet" href="{% static 'jobs/css/style.css' %}">#}
 </head>
 <body>
 <div class="container">
