--- a/job_finder/jobs/templates/jobs/position-form.html
+++ b/job_finder/jobs/templates/jobs/position-form.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row">
         <label for="{{ form.info.name }}" class="two columns">{{ form.info.label_tag }}</label>
-        <input id="{{ form.info.name }}" type="textarea" name="{{ form.info.name }}" value="{% if form.info.value %}{{ form.info.value }}{% endif %}" class="four columns" />
+        <textarea id="{{ form.info.name }}" name="{{ form.info.name }}" class="four columns">{% if form.info.value %}{{ form.info.value|safe }}{% endif %}</textarea>
     </div>
     <div class="row">
         <label for="{{ form.start_date.name }}" class="two columns">{{ form.start_date.label_tag }}</label>
